# ThunderTalk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  SECURITY.md  ThunderTalk.spec  build_macos.py  pyproject.toml  run.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: icon.icns
docs/: ARCHITECTURE.md  DEVELOPMENT.md
docs/plans/: 2026-04-24-translation-seamlessm4t.md
tests/: test_itn.py  test_translate.py
thundertalk/: __init__.py  __main__.py  app.py
thundertalk/core/: asr.py  audio.py  auto_learn.py  history.py  hotkey.py  i18n.py  itn.py  models.py  platform_utils.py  settings.py  system_audio.py  text_output.py  translate.py  updater.py  vad.py
thundertalk/ui/: macos_blur.py  main_window.py  overlay.py  review_overlay.py  styled_dialog.py  theme.py  tray.py
thundertalk/ui/pages/: about_page.py  home_page.py  hotwords_page.py  models_page.py  settings_page.py
