[project]
name = "thundertalk"
version = "1.0.3"
description = "Lightning-fast voice-to-text for every desktop"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7",
    "sherpa-onnx>=1.12",
    "sounddevice>=0.5",
    "numpy>=1.24",
    "pynput>=1.7",
    "pyperclip>=1.8",
    "sherpa-onnx-core>=1.12.38",
    "pyinstaller>=6.19.0",
    "pyqtdarktheme>=0.1.7",
]

[project.optional-dependencies]
mlx = [
    "mlx-qwen3-asr>=0.3",
]
translation = [
    "torch>=2.4",
    "transformers>=4.40,<6.0",
    "sentencepiece>=0.2",
    "tiktoken>=0.7",
    "protobuf>=4.25",
    "soundfile>=0.12",
]

[project.scripts]
thundertalk = "thundertalk.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pillow>=12.2.0",
    "pyinstaller>=6.19.0",
    "ruff>=0.11",
]
